tests/e2e/positive/local-extern/input.ei
int main() {
    int add(int a, int b);
    int sub(int a, int b);
    return sub(add(21, 30), 51);
}

int add(int a, int b) { return a + b; }
int sub(int a, int b) { return a - b; }

