tests/e2e/negative/arg-redefinition/input.ei
int func(int a, int a) {
    return a;
}
